--- a/C4-Server/package.json
+++ b/C4-Server/package.json
@@ -15,6 +15,8 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "shortid": "^2.2.8",
+    "ws": "^3.3.3"
   }
 }
