--- a/C4-Server/package.json
+++ b/C4-Server/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "jsonwebtoken": "^8.1.0",
     "morgan": "^1.7.0",
     "serve-favicon": "^2.3.0",
     "shortid": "^2.2.8",
