--- a/Connect4/Connect4.csproj
+++ b/Connect4/Connect4.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{53D8C896-D773-4DDF-B8F1-FD22C271E26F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Connect4</RootNamespace>
-    <AssemblyName>Connect4</AssemblyName>
+    <RootNamespace>SHyTY4</RootNamespace>
+    <AssemblyName>SHyTY4</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -97,6 +97,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include=".gitignore" />
     <None Include="packages.config" />
