--- a/C4/C4/C4.vbproj
+++ b/C4/C4/C4.vbproj
@@ -12,6 +12,24 @@
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ErrorReportUrl>https:\\discord.gg/j9Z3Qc7</ErrorReportUrl>
+    <ProductName>C4</ProductName>
+    <PublisherName>Nightmarlin</PublisherName>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.1.%2a</ApplicationVersion>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -45,6 +63,9 @@
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\c-4logo.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -76,6 +97,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmInfo.Designer.vb">
+      <DependentUpon>FrmInfo.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FrmInfo.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="ExternalVars.vb" />
     <Compile Include="FrmEntry.Designer.vb">
       <DependentUpon>FrmEntry.vb</DependentUpon>
@@ -87,12 +114,6 @@
       <DependentUpon>FrmHelp.vb</DependentUpon>
     </Compile>
     <Compile Include="FrmHelp.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmInformation.Designer.vb">
-      <DependentUpon>FrmInformation.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FrmInformation.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmMPlayerGame.Designer.vb">
@@ -136,14 +157,14 @@
     <Compile Include="Themes.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="FrmInfo.resx">
+      <DependentUpon>FrmInfo.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmEntry.resx">
       <DependentUpon>FrmEntry.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmHelp.resx">
       <DependentUpon>FrmHelp.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FrmInformation.resx">
-      <DependentUpon>FrmInformation.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMPlayerGame.resx">
       <DependentUpon>FrmMPlayerGame.vb</DependentUpon>
@@ -178,6 +199,22 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Song.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\c-4logo.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LargeC4.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\C4Art.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
