--- a/C4/C4/C4.vbproj
+++ b/C4/C4/C4.vbproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <StartupObject>C4.My.MyApplication</StartupObject>
     <RootNamespace>C4</RootNamespace>
-    <AssemblyName>C4</AssemblyName>
+    <AssemblyName>C-4</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -38,7 +38,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>C4.xml</DocumentationFile>
+    <DocumentationFile>C-4.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -48,7 +48,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>C4.xml</DocumentationFile>
+    <DocumentationFile>C-4.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -154,6 +154,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="OnlineGameDetails.vb" />
+    <Compile Include="SS.Designer.vb">
+      <DependentUpon>SS.vb</DependentUpon>
+    </Compile>
+    <Compile Include="SS.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Themes.vb" />
   </ItemGroup>
   <ItemGroup>
@@ -180,6 +186,9 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SS.resx">
+      <DependentUpon>SS.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
